--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.0
   flutter_zoom_drawer: ^1.0.4
+  percent_indicator: ^2.1.8
 
 
 dev_dependencies:
