--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   percent_indicator: ^2.1.8
   video_player: ^1.0.0
   flutter_launcher_icons: ^0.8.1
+  font_awesome_flutter: ^8.10.0
 
 
 dev_dependencies:
