--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   video_player: ^1.0.0
   flutter_launcher_icons: ^0.8.1
   font_awesome_flutter: ^8.10.0
+  flutter_local_notifications: ^3.0.1+5
 
 
 dev_dependencies:
