--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_launcher_icons: ^0.8.1
   font_awesome_flutter: ^8.10.0
   flutter_local_notifications: ^3.0.1+5
+  uuid: ^2.2.2
 
 
 dev_dependencies:
