--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   font_awesome_flutter: ^8.10.0
   flutter_local_notifications: ^3.0.1+5
   uuid: ^2.2.2
-  flutter_svg: ^0.19.2+1
+  flutter_svg: ^0.19.2
+  flutter_screenutil: ^3.2.0
 
 
 dev_dependencies:
