--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_svg: ^0.19.2
   flutter_screenutil: ^3.2.0
   intl: ^0.16.1
+  cached_network_image: ^2.4.1
 
 
 dev_dependencies:
