--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   cached_network_image: ^2.4.1
   webview_flutter: ^1.0.7
   url_launcher: ^5.7.10
+  get_it: ^5.0.1
 
 
 dev_dependencies:
