--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   video_player: ^1.0.0
   flutter_launcher_icons: ^0.8.1
   font_awesome_flutter: ^8.10.0
-  flutter_local_notifications: ^3.0.1+5
+  flutter_local_notifications: ^3.0.2
   uuid: ^2.2.2
   flutter_svg: ^0.19.2
   flutter_screenutil: ^3.2.0
