--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ dependencies:
   flutter_local_notifications: ^3.0.2
   uuid: ^2.2.2
   flutter_svg: ^0.19.2
-  flutter_screenutil: ^3.2.0
   intl: ^0.16.1
   cached_network_image: ^2.4.1
   webview_flutter: ^1.0.7
@@ -27,6 +26,8 @@ dependencies:
   fluttertoast: ^7.1.5
   flare_flutter: ^2.0.6
   package_info: ^0.4.3+2
+  provider: ^4.3.2+3
+  flutter_screenutil: ^4.0.3+1
 
 
 dev_dependencies:
