--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   package_info: ^0.4.3+2
   provider: ^4.3.2+3
   flutter_screenutil: ^4.0.3+1
+  shared_preferences: ^0.5.12+4
+  path: ^1.7.0
 
 
 dev_dependencies:
