--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_screenutil: ^4.0.3+1
   shared_preferences: ^0.5.12+4
   path: ^1.7.0
+  agora_rtc_engine: ^3.2.1
 
 
 dev_dependencies:
